syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.prism.protos";

package io.iohk.atala.prism.protos;

import "common_models.proto";
import "node_models.proto";

service NodeService {
    rpc GetDidDocument(GetDidDocumentRequest) returns (GetDidDocumentResponse) {}

    rpc CreateDID(CreateDIDRequest) returns (CreateDIDResponse) {}

    rpc UpdateDID(UpdateDIDRequest) returns (UpdateDIDResponse) {}

    rpc IssueCredential(IssueCredentialRequest) returns (IssueCredentialResponse) {}

    rpc IssueCredentialBatch(IssueCredentialBatchRequest) returns (IssueCredentialBatchResponse) {}

    rpc RevokeCredential(RevokeCredentialRequest) returns (RevokeCredentialResponse) {}

    rpc RevokeCredentials(RevokeCredentialsRequest) returns (RevokeCredentialsResponse) {}

    rpc GetCredentialState(GetCredentialStateRequest) returns (GetCredentialStateResponse) {}

    rpc GetTransactionStatus(GetTransactionStatusRequest) returns (GetTransactionStatusResponse) {}

    rpc GetNodeBuildInfo(GetNodeBuildInfoRequest) returns (GetNodeBuildInfoResponse) {}

    rpc GetBatchState(GetBatchStateRequest) returns (GetBatchStateResponse) {}

    rpc GetCredentialRevocationTime(GetCredentialRevocationTimeRequest) returns (GetCredentialRevocationTimeResponse) {}
}

message GetDidDocumentRequest {
    string did = 1;
}
message GetDidDocumentResponse {
    DIDData document = 1;
}

message CreateDIDRequest {
    SignedAtalaOperation signed_operation = 1;
}
message CreateDIDResponse {
    string id = 1; // DID suffix, where DID is in form did:prism.atala:[DID suffix]
    TransactionInfo transactionInfo = 2;
}

message UpdateDIDRequest {
    SignedAtalaOperation signed_operation = 1;
}
message UpdateDIDResponse {
    TransactionInfo transactionInfo = 1;
}

message IssueCredentialRequest {
    SignedAtalaOperation signed_operation = 1;
}
message IssueCredentialResponse {
    string id = 1; // credential id
    TransactionInfo transactionInfo = 2;
}

message IssueCredentialBatchRequest {
    SignedAtalaOperation signed_operation = 1;
}
message IssueCredentialBatchResponse {
    string batchId = 1; // id of the batch posted
    TransactionInfo transactionInfo = 2;
}

message RevokeCredentialRequest {
    SignedAtalaOperation signed_operation = 1;
}
message RevokeCredentialResponse {
    TransactionInfo transactionInfo = 1;
}

message RevokeCredentialsRequest {
    SignedAtalaOperation signed_operation = 1;
}
message RevokeCredentialsResponse {
    TransactionInfo transactionInfo = 1;
}

message GetNodeBuildInfoRequest {
}
message GetNodeBuildInfoResponse {
    string version = 1;
    string scalaVersion = 2;
    string sbtVersion = 3;
    string buildTime = 4;
}

message GetCredentialStateRequest {
    string credentialId = 1; // the id of the published credential (a.k.a. it is the output of the corresponding
                             // IssueCredential)
}

message GetCredentialStateResponse {
    string issuerDID = 1; // did used to sign the IssueCredentialBatch operation
    TimestampInfo publicationDate = 2; // If present: underlying blockchain timestamp that refers to the transaction that contains the IssueCredential operation associated to the credential
    TimestampInfo revocationDate = 3;  // If present: underlying blockchain timestamp that refers to the transaction that RevokeCredential operation associated to the credential
}

message GetBatchStateRequest {
    string batchId = 1; // id of the batch
}

message GetBatchStateResponse {
    string issuerDID = 1; // did used to sign the IssueCredential operation
    bytes merkleRoot = 2; // merkle root used IssueCredential operation
    TimestampInfo publicationDate = 3; // If present: underlying blockchain timestamp that refers to the transaction that                                // contains the IssueCredential operation associated to the credential
    TimestampInfo revocationDate = 4;  // If present: underlying blockchain timestamp that refers to the transaction that RevokeCredential operation associated to the credential
}

message GetCredentialRevocationTimeRequest {
    string batchId = 1; // the id corresponding to the credential to query about
    bytes credentialHash = 2; // the hash of the credential to query about
}

message GetCredentialRevocationTimeResponse {
    TimestampInfo revocationDate = 1; // if present, the time when the credential was revoked
}

message GetTransactionStatusRequest {
    TransactionInfo transactionInfo = 1;
}

message GetTransactionStatusResponse {
    TransactionInfo transactionInfo = 1;
    TransactionStatus status = 2;
}
